# auto-prop-firm

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/shell/: .env.example  next.config.js  package.json  tailwind.config.js  vitest.config.ts
apps/shell/prisma/: schema.prisma
apps/shell/public/: manifest.json
apps/shell/src/: middleware.ts
apps/shell/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/shell/src/app/admin/: admin-context.tsx  layout.tsx  page.tsx
apps/shell/src/app/challenges/: page.tsx
apps/shell/src/app/dashboard/: page.tsx
apps/shell/src/components/: ClientShell.tsx  Navbar.tsx  QueryProvider.tsx  SolanaProvider.tsx
apps/shell/src/lib/: admin-auth.ts  api-response.ts  api.ts  catalog.ts  claim-signer.ts  env.ts  fee-recorder.ts  fees.ts  hooks.ts  jwt.ts  propsim.ts  rate-limit.ts  referral.ts  schemas.ts  solana.ts
apps/shell/tests/: admin-auth.test.ts  api-auth.test.ts  fees.test.ts  jwt.test.ts  middleware.test.ts  referral.test.ts  setup.ts
programs/propsim_vault/: Cargo.toml
programs/propsim_vault/src/: ed25519.rs  errors.rs  lib.rs  state.rs
programs/propsim_vault/src/instructions/: initialize_config.rs  initialize_vault.rs  mod.rs  redeem_claim.rs  set_daily_cap.rs  set_propsim_signer.rs
scripts/: deploy-vault.sh  generate-signer.ts  mint-usdc.sh  setup-vault.sh  setup-vault.ts
tests/: propsim_vault.ts
(+95 files in other folders)
